--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -29,6 +29,7 @@ body:after {
 	color: white;
 	background-color: black;
 	width: 40%;
+	height: 100vh;
 }
 
 h1 {
@@ -36,6 +37,11 @@ h1 {
 	text-align: right;
 	font-size: 5em;
 	margin-right: .1em;
+}
+
+.images h1 {
+	padding-top: 5%;
+	text-align: left;
 }
 
 h1.medium-usage {
